ft made changes

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 dark light">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 <body>
     <header></header>
-    <button class="btn-toggle">Toggle Dark-Mode</button>
     <main>
         <aside class="form">
             <h1 class="logo">terms<span class="black">Hub</span></h1>
+            <img src="./images/hero-img-tablet.svg" alt="hero-img-tablet">
             <form action="">
-                <div>
+                <div class="email">
                     <label for="email">
                         email address
                     </label>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="agreement">
                     <input type="checkbox" name="agreement" required>
-                    <p>i acknowledge that I have read and agree to the Terms &amp; Conditions and Privacy Policy.</p>
+                    <p>i acknowledge that I have read and agree to the <a href="#">terms &amp; conditions</a> and <a href="#">privacy policy</a>.</p>
                 </div>
                 <button type="submit" class="signup-btn">create account</button>
             </form>
@@ -80,7 +80,6 @@
             <img src="./images/Vector mobile.svg" alt="vector-mobile">
             <div class="hero-images">
                 <img src="./images/hero-img.svg" alt="hero-img-desktop">
-                <img src="./images/hero-img-tablet.svg" alt="hero-img-tablet">
                 <img src="./images/Frame 383.svg" alt="purple-dot">
             </div>
         </aside>
