fixed vector positioning

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         password
                     </label>
                     <div class="form-group">
-                        <input type="password" name="password" id="password" class="password-input">
+                        <input type="password" name="password" id="password" class="password-input" placeholder="Type in your password">
                         <img src="./images/eye-closed.png" alt="eye-icon" class="eye">
                     </div>
                     <p class="error-message"></p>
@@ -39,7 +39,7 @@
                         confirm password
                     </label>
                     <div class="form-group">
-                        <input type="password" name="confirm password" id="confirm-password" class="password-input">
+                        <input type="password" name="confirm password" id="confirm-password" class="password-input" placeholder="Type in your password again">
                         <img src="./images/eye-closed.png" alt="eye-icon" class="eye">
                     </div>
                     <p class="error-message"></p>
