ft-adds username input field

--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
                         email address
                     </label>
                     <div class="form-group">
-                        <img src="./images/input-icon.svg" alt="input-icon" id="input-icon">
+                        <img src="./images/input-icon.svg" alt="input-icon" class="input-icon">
                         <input type="email" name="email" id="e-mail" placeholder="MichealJoe@mail.com">
+                    </div>
+                    <p class="error-message"></p>
+                </div>
+                <div class="username">
+                    <label for="username">
+                        username
+                    </label>
+                    <div class="form-group">
+                        <img src="./images/input-icon.svg" alt="input-icon" class="input-icon">
+                        <input type="text" name="username" id="username" placeholder="Type in your username">
                     </div>
                     <p class="error-message"></p>
                 </div>
